syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message NumberRequest{
  int64 firstValue = 1;
  int64 lastValue = 2;
}

message NumberResponse {
  int64 number = 1;
}

service NumbersService {
  rpc getSequenceOfNumber(NumberRequest) returns (stream NumberResponse) {};
}